<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/app_style"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.activities.auth.SignUpActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/welcome_please_enter_your_data"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameET"
            style="@style/sign_in_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="27dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailET"
            style="@style/sign_in_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="27dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordET"
            style="@style/sign_in_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/edit_text_design">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:gravity="start"
            android:text="@string/enter_at_least_8_characters"
            android:textColor="@color/light_gray" />

        <Button
            android:id="@+id/logInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="27dp"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/poppins_bold"
            android:paddingHorizontal="33dp"
            android:paddingVertical="18dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="18dp" />


    </LinearLayout>
</layout>