<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/app_style"
        tools:context=".ui.activities.auth.LoginActivity">

        <View
            android:id="@+id/backArrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/caLogo"
            android:layout_width="211dp"
            android:layout_height="234dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ca_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/SignInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:text="@string/sign_in"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caLogo" />

        <TextView
            android:id="@+id/signToTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/login_to_your_account"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/SignInTV"
            app:layout_constraintTop_toBottomOf="@id/SignInTV" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            style="@style/sign_in_edit_text"
            android:layout_marginHorizontal="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signToTv">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="27dp"
            style="@style/sign_in_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailET">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="27dp"
            android:backgroundTint="@color/light_purple"
            android:fontFamily="@font/poppins_bold"
            android:paddingHorizontal="33dp"
            android:paddingVertical="18dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordET" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInBtn">

            <Button
                android:id="@+id/signInWithGoogleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_extra_bold"
                android:paddingVertical="11dp"
                android:text="@string/google"
                android:textColor="#1D1B4A"
                android:textSize="20sp"
                app:cornerRadius="18dp" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="35dp"
                android:layout_weight="1"
                android:backgroundTint="#1D1B4A"
                android:fontFamily="@font/poppins_extra_bold"
                android:paddingVertical="11dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="18dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>