<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/app_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="93dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/voice_generation"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/voiceET"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:fontFamily="@font/rubik"
                android:textColor="@color/white"
                app:hintEnabled="false">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="28dp"
                    android:background="@drawable/edit_text_design"
                    android:gravity="start"
                    android:hint="@string/write_your_script_here"
                    android:inputType="textMultiLine"
                    android:padding="12dp"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/generateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="34dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="43dp"
                android:fontFamily="@font/inter_bold"
                android:paddingVertical="22dp"
                android:text="@string/generate_voice"
                android:textSize="20sp"
                app:cornerRadius="18dp" />
        </LinearLayout>

        <include
            android:id="@+id/loadingLayout"
            layout="@layout/voice_loading_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>