<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/app_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pageAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:minHeight="147dp"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/cancelButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/close_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/user_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="13dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/profile"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/profileImage"
                app:layout_constraintStart_toStartOf="@id/profileImage"
                app:layout_constraintTop_toBottomOf="@id/profileImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pageAppBar">

            <TextView
                android:id="@+id/usernameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#15181B"
                android:paddingVertical="20dp"
                android:paddingStart="11dp"
                android:text="@string/username"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userEmailTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="#15181B"
                android:paddingVertical="20dp"
                android:paddingStart="11dp"
                android:text="@string/email"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>